Fikset JavafX, Light, LightController, MainApp og Roomene.